# community-runoff-monitor

./: .env.example  .gitignore  Makefile  README.md  app.py  pyproject.toml  requirements.txt
scripts/: backtest_model.py  build_features.py  ingest.py  train_model.py
src/: __init__.py  config.py  db.py  refresh.py  risk.py  validation.py
src/clients/: __init__.py  usgs_client.py  weather_client.py
src/ml/: __init__.py  evaluate.py  features.py  predict.py  train.py
src/ui/: __init__.py  components.py
tests/: test_clients.py  test_db.py  test_ml_evaluate.py  test_ml_features.py  test_regions.py  test_risk.py  test_ui_components.py  test_validation.py
